--- a/client/views/main/productInfo.html
+++ b/client/views/main/productInfo.html
@@ -22,7 +22,7 @@
         <ul class="flex justify-start items-start border-0">
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[5px]"
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[0.3125rem]"
             ></span>
             <span class="sr-only">수신감도</span>
           </li>
@@ -34,7 +34,7 @@
           </li>
           <li class="cellItem">
             <span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[5px]"
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[0.3125rem]"
             ></span>
             <span class="sr-only">배터리 잔량</span>
           </li>
@@ -53,7 +53,7 @@
           </li>
           <li class="headerItem w-[25px] h-[25px]">
             <a
-              class="sprite spriteHome inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-84px_-93px] ml-[-10px]"
+              class="sprite spriteHome inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-84px_-93px] ml-[-0.625rem]"
               href="./main.html"
               aria-label="홈"
               tabindex="0"
@@ -100,7 +100,7 @@
           </dd>
           <div class="flex flex-col ml-3">
             <dt class="sellerName text-base font-semibold leading-[150%]">맥이뜸</dt>
-            <dd class="sellerLocation text-[10.503px] leading-[160%] font-normal text-center">
+            <dd class="sellerLocation text-[0.6564rem] leading-[160%] font-normal text-center">
               응암동
             </dd>
           </div>
@@ -110,7 +110,7 @@
           <span class="text-[#5a85ee] text-base font-semibold leading-[150%]">
             41.2&#8451;<span class="ml-1">😀</span></span
           >
-          <span class="text-[10.503px] leading-[150%] font-normal text-[#919191] text-right mr-1"
+          <span class="text-[0.6564rem] leading-[150%] font-normal text-[#919191] text-right mr-1"
             >매너온도</span
           >
         </div>
@@ -119,21 +119,23 @@
       <section class="productInfo">
         <h2 class="sr-only">상품 정보</h2>
         <div class="productDetail flex flex-col pl-3 pr-0 pt-3 pb-5">
-          <span class="productTitle text-[18.662px] font-semibold">2020 MacBook Air M1</span>
+          <span class="productTitle text-[1.1664rem] font-semibold">2020 MacBook Air M1</span>
           <span
-            class="productRelease text-[10.503px] font-normal text-[#919191] inline-block mt-1.5"
+            class="productRelease text-[0.6564rem] font-normal text-[#919191] inline-block mt-1.5"
             >컴퓨터 &middot; <time datetime="2023-06-25T02:29">17분전</time></span
           >
-          <p class="productBrief w-[289px] h-[108px] text-sm font-normal leading-[160%] mt-[13px]">
+          <p
+            class="productBrief w-[289px] h-[108px] text-sm font-normal leading-[160%] mt-[0.8125rem]"
+          >
             상태 깨끗하고 좋아요 <br />
             왜냐하면 맥을 사용할 줄 몰라서 넷플릭스용으로만 봤어요. 집근처에서 거래 희망합니다.
           </p>
         </div>
       </section>
-      <section class="relatedWrapper">
+      <section class="relatedWrap">
         <h2 class="sr-only">관련 콘텐츠</h2>
         <p
-          class="relatedContents w-80 px-3.5 py-3 border-t-[0.3px] border-[#919191] bg-[#FFF] shadow-sm text-base font-semibold leading-7"
+          class="relatedContents w-80 px-3.5 py-3 border-t-[0.3px] border-t-[#919191] bg-[#FFF] border-l border-r shadow-sm text-base font-semibold leading-7"
         >
           이 글과 함께 봤어요
         </p>
@@ -145,10 +147,10 @@
                 alt="상품이미지"
                 class="relatedImg w-full h-auto mb-1"
               />
-              <p class="relatedTitle text-[10.503px] leading-[160%] font-normal mt-3 ml-0.5">
+              <p class="relatedTitle text-[0.6564rem] leading-[160%] font-normal mt-3 ml-0.5">
                 스타벅스 아메리카노
               </p>
-              <p class="relatedPrice text-[10.503px] leading-[150%] font-semibold ml-0.5">
+              <p class="relatedPrice text-[0.6564rem] leading-[150%] font-semibold ml-0.5">
                 10,000원
               </p>
             </a>
@@ -160,10 +162,10 @@
                 alt="상품이미지"
                 class="relatedImg w-full h-auto mb-2"
               />
-              <p class="relatedTitle text-[10.503px] leading-[160%] font-normal mt-3 ml-0.5">
+              <p class="relatedTitle text-[0.6564rem] leading-[160%] font-normal mt-3 ml-0.5">
                 로지텍 키보드
               </p>
-              <p class="relatedPrice text-[10.503px] leading-[150%] font-semibold ml-0.5">
+              <p class="relatedPrice text-[0.6564rem] leading-[150%] font-semibold ml-0.5">
                 80,000원
               </p>
             </a>
@@ -175,10 +177,10 @@
                 alt="상품이미지"
                 class="relatedImg w-full h-auto mb-2"
               />
-              <p class="relatedTitle text-[10.503px] leading-[160%] font-normal mt-3 ml-0.5">
+              <p class="relatedTitle text-[0.6564rem] leading-[160%] font-normal mt-3 ml-0.5">
                 스타벅스 아메리카노
               </p>
-              <p class="relatedPrice text-[10.503px] leading-[150%] font-semibold ml-0.5">
+              <p class="relatedPrice text-[0.6564rem] leading-[150%] font-semibold ml-0.5">
                 10,000원
               </p>
             </a>
@@ -190,10 +192,10 @@
                 alt="상품이미지"
                 class="relatedImg w-full h-auto mb-2"
               />
-              <p class="relatedTitle text-[10.503px] leading-[160%] font-normal mt-3 ml-0.5">
+              <p class="relatedTitle text-[0.6564rem] leading-[160%] font-normal mt-3 ml-0.5">
                 로지텍 키보드
               </p>
-              <p class="relatedPrice text-[10.503px] leading-[150%] font-semibold ml-0.5">
+              <p class="relatedPrice text-[0.6564rem] leading-[150%] font-semibold ml-0.5">
                 80,000원
               </p>
             </a>
@@ -201,9 +203,9 @@
         </ul>
       </section>
     </main>
-    <footer class="sticky">
+    <footer class="fixed bottom-0 ml-0-0 mr-0-0 w-[20rem] border border-gray-200">
       <div
-        class="bg-white max-w-full rounded-t-lg flex w-full h-[calc(100%_-_87px)] justify-between z-10"
+        class="bg-white max-w-full rounded-t-lg flex w-full h-[calc(100%_-_87px)] justify-between pt-2 pb-2 z-10"
       >
         <div class="flex gap-3 ml-3">
           <span
@@ -212,15 +214,15 @@
           ></span>
           <span class="w-[1px] h-[34px] bg-[#919191]"></span>
           <div class="flex flex-col justify-center">
-            <span class="text-[14px] leading-[160%] font-normal ml-0.5">820,000원</span>
-            <span class="text-[10.503px] leading-[165%] font-normal ml-0.5 text-[#5a85ee]"
+            <span class="text-[0.875rem] leading-[160%] font-normal ml-0.5">820,000원</span>
+            <span class="text-[0.6564rem] leading-[165%] font-normal ml-0.5 text-[#5a85ee]"
               >가격 제안하기</span
             >
           </div>
         </div>
 
         <button class="p-2 rounded-lg bg-[#5A85EE] h-[37px] mr-3">
-          <span class="text-[white] text-[14px]">채팅하기</span>
+          <span class="text-[white] text-[0.875rem]">채팅하기</span>
         </button>
       </div>
     </footer>
