--- a/client/css/tailwind.css
+++ b/client/css/tailwind.css
@@ -14,13 +14,12 @@
     color: black !important;
   }
 }
-
 @layer utilities {
   html {
     height: 100%;
   }
   body {
-    @apply bg-white max-w-xs min-w-[20rem] h-full shadow-[rgba(0,0,0,0.16)_0px_0px_8px] border mx-auto border-solid border-[#e9e9e9];
+    @apply bg-white max-w-xs min-w-[20rem] h-full border mx-auto border-solid border-[#e9e9e9];
     font-family:
       Pretendard,
       -apple-system,
@@ -37,9 +36,11 @@
       'Segoe UI Symbol',
       sans-serif;
     font: inherit;
+    position: relative;
   }
   main {
     position: relative;
     width: 320px;
+    height: 100%;
   }
 }
