--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -14,10 +14,10 @@
   </head>
 
   <body>
-    <h1 class="a11yHidden">엔터이듬</h1>
+    <h1 class="sr-only">엔터이듬</h1>
 
     <header>
-      <h2 class="a11yHidden">기본 정보</h2>
+      <h2 class="sr-only">기본 정보</h2>
       <div class="flex justify-between items-center pt-2 px-4">
         <time class="inline-block text-sm font-semibold" datetime="2023-06-25T02:26">2:26</time>
         <ul class="flex justify-start items-start border-0">
@@ -25,31 +25,31 @@
             <span
               class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[5px]"
             ></span>
-            <span class="a11yHidden">수신감도</span>
+            <span class="sr-only">수신감도</span>
           </li>
           <li class="cellItem">
             <span
               class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
             ></span>
-            <span class="a11yHidden">데이터 종류</span>
+            <span class="sr-only">데이터 종류</span>
           </li>
           <li class="cellItem">
             <span
               class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[5px]"
             ></span>
-            <span class="a11yHidden">배터리 잔량</span>
+            <span class="sr-only">배터리 잔량</span>
           </li>
         </ul>
       </div>
       <div class="relative flex justify-start items-center gap-x-2 w-full h-10 px-4 pb-2">
         <div
-          class="grow relative z-[1] before:content-[''] before:absolute before:w-0 before:h-0 before:ml-[30px] before:-mt-px before:right-[15px] before:top-2/4"
+          class="grow relative z-[1] before:content-[''] before:absolute before:w-0 before:h-0 before:ml-[1.875rem] before:-mt-px before:right-[15px] before:top-2/4"
         >
           <label
             for="headerSelect"
             class="absolute w-4/5 z-[-1] text-lg font-bold py-2 top-[0.1875rem]"
             >남가좌제2동<span
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-155px_-70px] ml-[5px]"
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-155px_-70px] ml-[0.3125rem]"
             ></span></label
           ><select
             id="headerSelect"
@@ -67,24 +67,24 @@
         <ul class="flex w-[86px] h-[26px] justify-evenly mt-3">
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-196px_-8px] ml-[5px] mt-1"
-              href="/"
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-196px_-8px] ml-[0.3125rem] mt-1"
+              href="./search.html"
               aria-label="검색"
               tabindex="0"
             ></a>
           </li>
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/hamburger.svg')] bg-no-repeat w-5 h-5 ml-[3px] mt-0.5"
-              href="/"
+              class="inline-block bg-[url('./../../assets/icons/Icon/hamburger.svg')] bg-no-repeat w-5 h-5 ml-[0.1875rem] mt-0.5"
+              href="#"
               aria-label="메뉴"
               tabindex="0"
             ></a>
           </li>
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
-              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-269px_-116px] ml-[5px] mt-1"
-              href="/"
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-269px_-116px] ml-[0.3125rem] mt-1"
+              href="#"
               aria-label="알림"
               tabindex="0"
             ></a>
@@ -94,11 +94,11 @@
     </header>
 
     <nav
-      class="bg-white sticky w-full max-w-full border-t-[rgb(214,214,214)] border-t-0 border-solid bottom-0 border border-gray-200 shadow-md rounded-t-lg"
+      class="bottomNav bg-white sticky min-w-xs max-w-xs border-r-2 border-r-[rgb(214,214,214)] border-solid bottom-0 border shadow-md rounded-t-lg z-10 b"
     >
-      <h2 class="a11yHidden">메뉴</h2>
+      <h2 class="sr-only">메뉴</h2>
       <ul
-        class="z-10 w-[calc(100%_-_1.5rem)] max-w-xs flex justify-between gap-3 bg-white items-stretch font-normal text-[0.6875rem] fixed mx-auto pt-0 pb-2 px-2 bottom-0"
+        class="z-10 min-w-xs max-w-xs flex justify-between gap-4 bg-white items-stretch font-normal text-[0.6875rem] fixed mx-auto pt-0 pb-2 pr-2 bottom-0 left-0 right-0 border"
       >
         <li class="flex-1">
           <a
@@ -157,12 +157,11 @@
         </li>
       </ul>
     </nav>
-
     <main>
-      <h2 class="a11yHidden">메인 메뉴</h2>
+      <h2 class="sr-only">메인 메뉴</h2>
 
       <section class="relative w-full h-[15.9375rem] bg-[#9DA1B4]">
-        <h3 class="a11yHidden">개발자 이야기</h3>
+        <h3 class="sr-only">개발자 이야기</h3>
         <p
           class="text-white font-medium text-lg absolute w-[9.1875rem] leading-normal left-[30px] top-[30px]"
         >
@@ -170,14 +169,16 @@
         </p>
         <img
           class="absolute w-[13.75rem] right-0 bottom-0"
-          src="./../../assets/images/mainAd.png"
+          src="./../../assets/images/main/mainAd.png"
           alt="두 남자가 뒤를 보며 파이팅 하는 모습"
         />
-        <a href="/" class="text-white absolute text-[11px] left-[30px] top-[85px]">자세히 보기</a>
-        <div class="text-white text-[11px]">
+        <a href="#" class="text-white absolute text-[0.6875rem] left-[30px] top-[85px]"
+          >자세히 보기</a
+        >
+        <div class="text-white text-[0.6875rem]">
           <span class="absolute left-[1.875rem] top-[11.5rem]">01</span>
           <img
-            src="./../../assets/images/bar.png"
+            src="./../../assets/images/main/bar.png"
             alt="캐로셀 페이지바"
             class="absolute left-[2.9375rem] top-[12rem]"
             aria-hidden="true"
@@ -186,8 +187,8 @@
         </div>
       </section>
 
-      <nav>
-        <h3 class="a11yHidden">메인페이지 네비게이션</h3>
+      <nav class="topNav">
+        <h3 class="sr-only">헤더 네비게이션</h3>
         <ul
           class="w-full text-[rgba(255,255,255,0.5)] flex justify-around items-stretch font-normal gap-2 px-2 py-2.5 bg-[#373f67]"
         >
@@ -198,36 +199,36 @@
             <a href="./exchange.html" class="text-sm py-2">기기 거래</a>
           </li>
           <li class="mainList">
-            <a href="/" class="text-sm py-2">질의 응답</a>
+            <a href="#" class="text-sm py-2">질의 응답</a>
           </li>
           <li class="mainList">
-            <a href="/" class="text-sm py-2">함께 해요</a>
+            <a href="#" class="text-sm py-2">함께 해요</a>
           </li>
         </ul>
       </nav>
-      <section>
-        <h2 class="a11yHidden">선배님 스토리</h2>
-        <ul class="flex flex-wrap mt-3 mb-[3.75rem] px-3 py-0 h-[calc(100%_-_350px)] overflow-auto gap-4">
+      <section class="story">
+        <h2 class="sr-only">선배님 스토리</h2>
+        <ul class="flex flex-wrap mt-3 mb-[3.75rem] px-3 py-0 h-[700px] overflow-y gap-4">
           <li class="w-[138px] pb-2">
-            <a href="/" class="">
+            <a href="#" class="">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="./../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
-              <p class="leading-normal text-[11px]">
+              <p class="leading-normal text-[0.6875rem]">
                 디자인에 대해 하나도 알지 못했던 내가 취업할 수 있었던 이유
               </p>
               <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
                 UIUX <span aria-hidden="true">&#124;</span> 1기 수강생 박치열
               </p>
             </a>
-          </l gap-i>
+          </li>
           <li class="w-[138px] pb-2">
-            <a href="/" class="">
+            <a href="#" class="">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="../../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
               <p class="leading-normal text-[0.6875rem]">
@@ -237,12 +238,12 @@
                 UIUX <span aria-hidden="true">&#124;</span> 3기 수강생 김진우
               </p>
             </a>
-          </l gap-i>
+          </li>
           <li class="w-[138px] pb-2">
-            <a href="/" class="">
+            <a href="#" class="">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="../../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
               <p class="leading-normal text-[0.6875rem]">
@@ -252,12 +253,12 @@
                 UIUX <span aria-hidden="true">&#124;</span> 7기 수강생 김삼성
               </p>
             </a>
-          </l gap-i>
+          </li>
           <li class="w-[138px] pb-2">
-            <a href="/" class="leading-normal text-[0.6875rem]">
+            <a href="#" class="leading-normal text-[0.6875rem]">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="../../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
               <p class="leading-normal text-[0.6875rem]">
@@ -267,57 +268,57 @@
                 UIUX <span aria-hidden="true">&#124;</span> 4기 수강생 김환휘
               </p>
             </a>
-          </l gap-i>
+          </li>
           <li class="w-[138px] pb-2">
-            <a href="/" class="">
+            <a href="#" class="">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="../../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
-              <p class="text-[11.5px] leading-normal text-[0.6875rem]">
+              <p class="leading-normal text-[0.6875rem]">
                 나는 프론트일까? 백일까? 여전히 모르겠다면 물어봐!
               </p>
               <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
                 UIUX <span aria-hidden="true">&#124;</span> 2기 수강생 최혜수
               </p>
             </a>
-          </l gap-i>
+          </li>
           <li class="w-[138px] pb-2">
-            <a href="/" class="">
+            <a href="#" class="">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="../../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
-              <p class="text-[11.5px] leading-normal text-[0.6875rem]">
+              <p class="leading-normal text-[0.6875rem]">
                 코딩과 디자인의 그 어딘가 두가지 모두 하고 싶은 욕심쟁이
               </p>
               <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
                 UIUX <span aria-hidden="true">&#124;</span> 5기 수강생 염진희
               </p>
             </a>
-          </l gap-i>
+          </li>
           <li class="w-[138px] pb-2">
-            <a href="/" class="">
+            <a href="#" class="">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="../../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
-              <p class="leading-normal text-[11px]">
+              <p class="leading-normal text-[0.6875rem]">
                 디자인에 대해 하나도 알지 못했던 내가 취업할 수 있었던 이유
               </p>
               <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
                 UIUX <span aria-hidden="true">&#124;</span> 1기 수강생 박치열
               </p>
             </a>
-          </l gap-i>
+          </li>
           <li class="w-[138px] pb-2">
-            <a href="/" class="">
+            <a href="#" class="">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="../../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
               <p class="leading-normal text-[0.6875rem]">
@@ -327,12 +328,12 @@
                 UIUX <span aria-hidden="true">&#124;</span> 3기 수강생 김진우
               </p>
             </a>
-          </l gap-i>
+          </li>
           <li class="w-[138px] pb-2">
-            <a href="/" class="">
+            <a href="#" class="">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="../../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
               <p class="leading-normal text-[0.6875rem]">
@@ -342,12 +343,12 @@
                 UIUX <span aria-hidden="true">&#124;</span> 7기 수강생 김삼성
               </p>
             </a>
-          </l gap-i>
+          </li>
           <li class="w-[138px] pb-2">
-            <a href="/" class="leading-normal text-[0.6875rem]">
+            <a href="#" class="leading-normal text-[0.6875rem]">
               <img
                 class="w-full h-auto mb-2"
-                src="./../../assets/images/storyBg.png"
+                src="../../../assets/images/main/storyBg.png"
                 alt="프로필사진"
               />
               <p class="leading-normal text-[0.6875rem]">
