--- a/client/css/main.css
+++ b/client/css/main.css
@@ -534,6 +534,27 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.plusButton:hover + .exchangeWrite {
+  visibility: visible;
+  opacity: 1;
+}
+
+.plusButton:hover span {
+  color: black !important;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 .fixed {
   position: fixed;
 }
@@ -555,8 +576,24 @@ video {
   bottom: 0px;
 }
 
+.bottom-\[2\.125rem\] {
+  bottom: 2.125rem;
+}
+
+.bottom-\[6\.375rem\] {
+  bottom: 6.375rem;
+}
+
 .left-2\/4 {
   left: 50%;
+}
+
+.left-\[12px\] {
+  left: 12px;
+}
+
+.right-3 {
+  right: 0.75rem;
 }
 
 .top-0 {
@@ -567,8 +604,80 @@ video {
   top: 50%;
 }
 
+.bottom-\[1\.875rem\] {
+  bottom: 1.875rem;
+}
+
+.z-\[2\] {
+  z-index: 2;
+}
+
+.m-0 {
+  margin: 0px;
+}
+
+.mx-\[4\%\] {
+  margin-left: 4%;
+  margin-right: 4%;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mx-\[3\.75\%\] {
+  margin-left: 3.75%;
+  margin-right: 3.75%;
+}
+
+.my-\[3\.75\%\] {
+  margin-top: 3.75%;
+  margin-bottom: 3.75%;
+}
+
+.mx-\[11px\] {
+  margin-left: 11px;
+  margin-right: 11px;
+}
+
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-\[0\.5625rem\] {
+  margin-top: 0.5625rem;
+  margin-bottom: 0.5625rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-\[0\.6875rem\] {
+  margin-bottom: 0.6875rem;
+}
+
+.mb-\[2\.125rem\] {
+  margin-bottom: 2.125rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
+.ml-3\.5 {
+  margin-left: 0.875rem;
 }
 
 .ml-auto {
@@ -579,8 +688,52 @@ video {
   margin-right: 0px;
 }
 
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mr-\[3\.75\%\] {
+  margin-right: 3.75%;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-\[11rem\] {
+  margin-top: 11rem;
+}
+
+.mt-\[6px\] {
+  margin-top: 6px;
+}
+
 .mt-auto {
   margin-top: auto;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+
+.mb-9 {
+  margin-bottom: 2.25rem;
 }
 
 .box-border {
@@ -603,8 +756,16 @@ video {
   display: none;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .h-\[30\.73px\] {
   height: 30.73px;
+}
+
+.h-\[36px\] {
+  height: 36px;
 }
 
 .h-\[37px\] {
@@ -615,6 +776,18 @@ video {
   height: 400px;
 }
 
+.h-\[45px\] {
+  height: 45px;
+}
+
+.h-\[46px\] {
+  height: 46px;
+}
+
+.h-\[54px\] {
+  height: 54px;
+}
+
 .h-\[60px\] {
   height: 60px;
 }
@@ -623,12 +796,72 @@ video {
   height: 693px;
 }
 
+.h-\[75px\] {
+  height: 75px;
+}
+
 .h-\[763px\] {
   height: 763px;
 }
 
+.h-\[91px\] {
+  height: 91px;
+}
+
+.h-\[57px\] {
+  height: 57px;
+}
+
+.h-\[16px\] {
+  height: 16px;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[40px\] {
+  height: 40px;
+}
+
+.h-\[22px\] {
+  height: 22px;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-3\.5 {
+  height: 0.875rem;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-\[1\.875rem\] {
+  height: 1.875rem;
+}
+
+.h-\[30px\] {
+  height: 30px;
+}
+
+.h-\[38px\] {
+  height: 38px;
+}
+
 .max-h-full {
   max-height: 100%;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-80 {
@@ -639,12 +872,20 @@ video {
   width: 190px;
 }
 
+.w-\[20px\] {
+  width: 20px;
+}
+
 .w-\[301px\] {
   width: 301px;
 }
 
 .w-\[320px\] {
   width: 320px;
+}
+
+.w-\[54px\] {
+  width: 54px;
 }
 
 .w-\[60px\] {
@@ -655,16 +896,56 @@ video {
   width: 84.5px;
 }
 
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[92\.8125\%\] {
+  width: 92.8125%;
+}
+
 .w-\[\] {
   width: ;
 }
 
-.w-\[20px\] {
-  width: 20px;
+.w-full {
+  width: 100%;
+}
+
+.w-\[16px\] {
+  width: 16px;
+}
+
+.w-11 {
+  width: 2.75rem;
+}
+
+.w-\[40px\] {
+  width: 40px;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-3\.5 {
+  width: 0.875rem;
+}
+
+.w-\[1\.875rem\] {
+  width: 1.875rem;
 }
 
 .max-w-full {
   max-width: 100%;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.grow-\[2\] {
+  flex-grow: 2;
 }
 
 .-translate-x-2\/4 {
@@ -703,12 +984,24 @@ video {
   flex-wrap: nowrap;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
 }
 
 .items-stretch {
   align-items: stretch;
+}
+
+.justify-start {
+  justify-content: flex-start;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -731,12 +1024,32 @@ video {
   border-radius: 20px;
 }
 
+.rounded-\[50\%\] {
+  border-radius: 50%;
+}
+
+.rounded-\[50px\] {
+  border-radius: 50px;
+}
+
 .rounded-\[5px\] {
   border-radius: 5px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-\[30px\] {
+  border-radius: 30px;
+}
+
 .border {
   border-width: 1px;
+}
+
+.border-0 {
+  border-width: 0px;
 }
 
 .border-solid {
@@ -748,9 +1061,38 @@ video {
   border-color: rgb(157 161 180 / var(--tw-border-opacity));
 }
 
+.border-\[none\] {
+  border-color: none;
+}
+
+.bg-\[\#373F67\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 63 103 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e9e9e9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 233 233 / var(--tw-bg-opacity));
+}
+
 .bg-\[red\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
 .bg-green-400 {
@@ -761,6 +1103,21 @@ video {
 .bg-pink-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 168 212 / var(--tw-bg-opacity));
+}
+
+.bg-pink-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
+}
+
+.bg-pink-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(131 24 67 / var(--tw-bg-opacity));
+}
+
+.bg-purple-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 180 254 / var(--tw-bg-opacity));
 }
 
 .bg-purple-700 {
@@ -792,8 +1149,64 @@ video {
   background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 
+.bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 98 7 / var(--tw-bg-opacity));
+}
+
+.bg-pink-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 39 119 / var(--tw-bg-opacity));
+}
+
+.bg-\[blue\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 255 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#919191\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(145 145 145 / var(--tw-bg-opacity));
+}
+
+.bg-pink-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 114 182 / var(--tw-bg-opacity));
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-2\.5 {
+  padding: 0.625rem;
+}
+
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-3\.5 {
+  padding: 0.875rem;
+}
+
+.p-0 {
+  padding: 0px;
 }
 
 .px-2 {
@@ -831,24 +1244,120 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pt-\[5\.625rem\] {
-  padding-top: 5.625rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.px-\[11px\] {
+  padding-left: 11px;
+  padding-right: 11px;
+}
+
+.px-\[0\.375rem\] {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+}
+
+.py-\[0\.625rem\] {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
+.py-\[0\.5625rem\] {
+  padding-top: 0.5625rem;
+  padding-bottom: 0.5625rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .pb-6 {
   padding-bottom: 1.5rem;
 }
 
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pl-7 {
+  padding-left: 1.75rem;
+}
+
+.pr-0 {
+  padding-right: 0px;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-\[5\.625rem\] {
+  padding-top: 5.625rem;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
+.pt-\[0\.8125rem\] {
+  padding-top: 0.8125rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
+.align-middle {
+  vertical-align: middle;
+}
+
+.font-\[inherit\] {
+  font-family: inherit;
+}
+
+.text-\[0\.625rem\] {
+  font-size: 0.625rem;
+}
+
 .text-\[0\.66rem\] {
   font-size: 0.66rem;
+}
+
+.text-\[1\.166rem\] {
+  font-size: 1.166rem;
 }
 
 .text-lg {
@@ -856,25 +1365,45 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[0\.625rem\] {
-  font-size: 0.625rem;
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
-.font-bold {
-  font-weight: 700;
+.text-\[100\%\] {
+  font-size: 100%;
 }
 
-.font-\[400px\] {
-  font-weight: 400px;
+.text-\[1\.1625rem\] {
+  font-size: 1.1625rem;
+}
+
+.text-\[0\.65625rem\] {
+  font-size: 0.65625rem;
 }
 
 .font-\[400\] {
   font-weight: 400;
 }
 
-.text-indigo-500 {
-  --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity));
+.font-bold {
+  font-weight: 700;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.leading-\[160\%\] {
+  line-height: 160%;
+}
+
+.leading-\[inherit\] {
+  line-height: inherit;
 }
 
 .text-\[\#9DA1B4\] {
@@ -882,7 +1411,86 @@ video {
   color: rgb(157 161 180 / var(--tw-text-opacity));
 }
 
+.text-\[white\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-indigo-500 {
+  --tw-text-opacity: 1;
+  color: rgb(99 102 241 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[black\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-inherit {
+  color: inherit;
+}
+
 .no-underline {
   text-decoration-line: none;
 }
 
+.shadow-\[0px_4px_4px_0px_rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
+  --tw-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+  --tw-shadow-colored: 0px 4px 4px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_16px_3px_rgba\(0_0_0_\/_15\%\)\] {
+  --tw-shadow: 0 0 16px 3px rgba(0 0 0 / 15%);
+  --tw-shadow-colored: 0 0 16px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  margin-left: auto;
+  margin-right: auto;
+  height: 100%;
+  min-width: 20rem;
+  max-width: 20rem;
+  border-width: 1px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(233 233 233 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-shadow: rgba(0,0,0,0.16) 0px 0px 8px;
+  --tw-shadow-colored: 0px 0px 8px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  font-family:
+      Pretendard,
+      -apple-system,
+      BlinkMacSystemFont,
+      system-ui,
+      Roboto,
+      'Helvetica Neue',
+      'Segoe UI',
+      'Apple SD Gothic Neo',
+      'Noto Sans KR',
+      'Malgun Gothic',
+      'Apple Color Emoji',
+      'Segoe UI Emoji',
+      'Segoe UI Symbol',
+      sans-serif;
+  font: inherit;
+}
+
+main {
+  /* position: relative; */
+  width: 320px;
+}
+
+/* src/styles.css */
