--- a/client/views/board/boardContent.html
+++ b/client/views/board/boardContent.html
@@ -16,42 +16,69 @@
   </head>
 
   <body>
-    <div class="outer">
-      <header>
-        <div class="backBar">
-          <img src="/" alt="뒤로가기" tabindex="0" />
-        </div>
-        <div>
-          <img src="./../images/header/share.png" role="button" alt="공유하기" tabindex="0" />
-          <img src="./../images/header/more.png" role="button" alt="더보기" tabindex="0" />
-        </div>
-      </header>
-      <main class="content">
-        <span class="ContentLabel">📝스터디</span>
-        <h2><span class="contentStatus">모집중</span> EUID 피그마 스터디 하실분~</h2>
-        <p><img src="./../images/board/people_.png" alt="모집조건" />누구나 참여 가능</p>
-        <p><img src="./../images/board/fullcalender.png" alt="시간" />오늘</p>
-        <p>연남동 거주하시는 분 중에서 이번에 시작하는 멋사플레이스 피그마 스터디 하실분~~~</p>
-        <p>아직 기초라서 조금 능숙한분과 함께 했으면 좋겠습니다. 툴은 figma 사용할 예정입니다.</p>
-        <br />
-        <p>하다가 어려우면 선범님 강의 결제 예정입니다.</p>
-        <p>같이 강의도 나눠서 결제하고 들으면 더 좋을 것 같습니다! ㅎㅎ</p>
-        <p>*연남동 스타벅스에서 매주 월요일 진행!</p>
-        <p class="contentMember">참여중인 이웃 <span class="contentMemberCounter">1</span>/4</p>
-        <div class="contentMemberProfile">
-          <div class="contentMemberThumbnail"></div>
-          <div class="contentMemberInfo">
-            멋사드미
-            <img
-              src="./../images/board/organizer.png"
-              class="contentMemberBadge"
-              alt="모임장"
-            /><span class="contentMemberPosition">모임장</span>
-            <p class="contentMemberTown">연남동 인증 4회</p>
+    <div
+      class="outer px-3 w-80 h-[763px] -translate-x-2/4 -translate-y-2/4 absolute bg-yellow-200 left-2/4 top-2/4 overflow-hidden"
+    >
+      <header class="">
+        <div
+          class="backBar flex flex-nowrap flex-row py-2 h-[36px] bg-pink-500 items-stretch justify-between"
+        >
+          <div class=""><img src="/" class="left-[12px] absolute" alt="/" tabindex="0" /></div>
+          <div class="flex flex-nowrap flex-row items-stretch justify-between">
+            <img src="/" role="button" alt="공유하기" tabindex="0" />
+            <img src="/" role="button" alt="더보기" tabindex="0" />
           </div>
         </div>
-        <button class="nextButton" onclick="location.href='/'">채팅방으로 이동</button>
+      </header>
+      <main class="content pr-3 mt-6">
+        <span class="ContentLabel">📝스터디</span>
+        <h2 class="h-[40px] text-lg py-[0.5625rem]">
+          <span class="contentStatus">모집중</span> EUID 피그마 스터디 하실분~
+        </h2>
+        <p class="h-[22px] text-sm">
+          <img class="w-3.5 h-3.5" src="./../images/board/people_.png" alt="모집조건" />누구나 참여
+          가능
+        </p>
+        <p class="h-[22px] text-sm">
+          <img class="w-3.5 h-3.5" src="./../images/board/fullcalender.png" alt="시간" />오늘
+        </p>
+        <div class="h-auto mb-9">
+          <p>연남동 거주하시는 분 중에서 이번에 시작하는 멋사플레이스 피그마 스터디 하실분~~~</p>
+          <p>아직 기초라서 조금 능숙한분과 함께 했으면 좋겠습니다. 툴은 figma 사용할 예정입니다.</p>
+          <br />
+          <p>하다가 어려우면 선범님 강의 결제 예정입니다.</p>
+          <p>같이 강의도 나눠서 결제하고 들으면 더 좋을 것 같습니다! ㅎㅎ</p>
+          <p>*연남동 스타벅스에서 매주 월요일 진행!</p>
+        </div>
+        <p class="contentMember h-12 bg-orange-400 pt-[0.8125rem]">
+          참여중인 이웃 <span class="contentMemberCounter">1</span>/4
+        </p>
+        <div class="contentMemberProfile text-[0.625rem] bg-pink-400 h-[30px]">
+          <div class="flex flex-nowrap flex-row bg-blue-500 items-stretch">
+            <div
+              class="contentMemberThumbnail w-[1.875rem] h-[1.875rem] bg-[#919191] inline-block rounded-[50px]"
+            ></div>
+            <div class="">
+              <div
+                class="contentMemberInfo flex flex-nowrap flex-row bg-pink-500 items-stretch justify-between"
+              >
+                멋사드미
+                <img class="w-[20px] h-[20px]" src="/" class="contentMemberBadge" alt="/" /><span
+                  class="contentMemberPosition"
+                  >모임장</span
+                >
+              </div>
+              <p class="contentMemberTown">연남동 인증 4회</p>
+            </div>
+          </div>
+        </div>
       </main>
+      <button
+        class="nextButton bg-[#373F67] text-[white] text-sm w-[92.8125%] h-[45px] fixed mt-6 mb-[2.125rem] mr-[3.75%] rounded-lg border-0 bottom-[2.125rem]"
+        onclick="location.href='/'"
+      >
+        채팅방으로 이동
+      </button>
     </div>
   </body>
 </html>
