--- a/client/views/board/searchActivities.html
+++ b/client/views/board/searchActivities.html
@@ -16,24 +16,62 @@
   </head>
 
   <body>
-    <div class="outer">
-      <div class="backBar">
-        <img src="/" alt="뒤로가기" tabindex="0" />
-      </div>
-      <main>
+    <div
+      class="outer w-80 h-[763px] -translate-x-2/4 -translate-y-2/4 absolute bg-[red] left-2/4 top-2/4 overflow-hidden"
+    >
+      <header class="">
+        <div
+          class="backBar flex flex-nowrap flex-row px-3 h-[36px] bg-pink-500 items-center justify-center"
+        >
+          <img src="/" class="left-[12px] absolute" alt="뒤로가기" tabindex="0" />
+        </div>
+      </header>
+      <main class="pl-3 pr-0 pt-4 pb-0">
         <div class="activityWrap">
-          <label for="text">활동 </label>
-          <input type="text" class="" id="text" placeholder="이웃과 어떤 활동을 할까요" />
-          <p class="activityRecommended">남가좌제2동 근처 인기활동</p>
+          <label for="text" class="sr-only">활동</label>
+          <input
+            type="text"
+            class="w-[90%] text-[1.166rem] mt-0 mb-3 mx-[4%] border-[none]"
+            id="text"
+            placeholder="이웃과 어떤 활동을 할까요?"
+          />
+          <p class="activityRecommended font-semibold text-[0.66rem] my-4">
+            남가좌제2동 근처 인기활동
+          </p>
           <div class="activityList">
-            <button class="activityButton">💻 같이 프로젝트해요</button>
-            <button class="activityButton">📝 같이 스터디해요</button>
-            <button class="activityButton">🍚 같이 밥먹어요</button>
-            <button class="activityButton">⌨️ 같이 Lv2.알고리즘 풀어요</button>
-            <button class="activityButton">🙈 오프라인으로 만나요</button>
+            <button
+              class="activityButton border text-[0.66rem] bg-transparent no-underline cursor-pointer mb-[0.6875rem] px-2.5 py-1.5 rounded-[20px] border-solid border-[#9DA1B4]"
+            >
+              💻 같이 프로젝트해요
+            </button>
+            <button
+              class="activityButton border text-[0.66rem] bg-transparent no-underline cursor-pointer mb-[0.6875rem] px-2.5 py-1.5 rounded-[20px] border-solid border-[#9DA1B4]"
+            >
+              📝 같이 스터디해요
+            </button>
+            <button
+              class="activityButton border text-[0.66rem] bg-transparent no-underline cursor-pointer mb-[0.6875rem] px-2.5 py-1.5 rounded-[20px] border-solid border-[#9DA1B4]"
+            >
+              🍚 같이 밥먹어요
+            </button>
+            <button
+              class="activityButton border text-[0.66rem] bg-transparent no-underline cursor-pointer mb-[0.6875rem] px-2.5 py-1.5 rounded-[20px] border-solid border-[#9DA1B4]"
+            >
+              ⌨️ 같이 Lv2.알고리즘 풀어요
+            </button>
+            <button
+              class="activityButton border text-[0.66rem] bg-transparent no-underline cursor-pointer mb-[0.6875rem] px-2.5 py-1.5 rounded-[20px] border-solid border-[#9DA1B4]"
+            >
+              🙈 오프라인으로 만나요
+            </button>
           </div>
         </div>
-        <button class="nextButton" onclick="location.href='/'">다음</button>
+        <button
+          class="nextButton bg-[#373F67] text-[white] text-sm w-[92.8125%] h-[45px] fixed mt-6 mb-[2.125rem] mr-[3.75%] rounded-lg border-0 bottom-[2.125rem]"
+          onclick="location.href='/'"
+        >
+          다음
+        </button>
       </main>
     </div>
   </body>
