--- a/client/views/board/withWho.html
+++ b/client/views/board/withWho.html
@@ -16,33 +16,72 @@
   </head>
 
   <body>
-    <div class="outer">
-      <div class="backBar">
-        <img src="/" alt="뒤로가기" tabindex="0" />
-      </div>
-      <main class="withTitle">
-        <h2>어떤 학생과 함께 할까요?</h2>
+    <div
+      class="outer w-80 h-[763px] -translate-x-2/4 -translate-y-2/4 absolute bg-pink-300 left-2/4 top-2/4 overflow-hidden"
+    >
+      <header class="">
+        <div
+          class="backBar flex flex-nowrap flex-row px-3 h-[36px] bg-pink-500 items-center justify-center"
+        >
+          <img src="/" class="left-[12px] absolute" alt="뒤로가기" tabindex="0" />
+        </div>
+      </header>
+      <main class="pl-3 pr-3 pt-4 pb-0">
+        <h2 class="w-full text-[1.1625rem] font-semibold mt-0 mb-3">어떤 학생과 함께 할까요?</h2>
+
         <ul>
-          <li>
-            <div><img src="./../images/withWho/sex.png" alt="성별" />성별</div>
+          <li
+            class="h-[46px] text-sm flex flex-nowrap flex-row bg-pink-600 items-center justify-between"
+          >
+            <div class=""><img class="w-[20px] h-[20px]" src="/" alt="/" />성별</div>
             <div>누구나</div>
           </li>
-          <li class="withSelect">
-            <p class="withDescription">누구나 또는 같은 성별 모임으로 설정해주세요.</p>
-            <button class="withAnybody">누구나</button>
-            <button class="withFemale">여자만</button>
-            <button class="withMale">남자만</button>
+          <li class="withSelect text-[0.65625rem]">
+            <p class="withDescription text-[#9DA1B4] mx-0 my-2">
+              누구나 또는 같은 성별 모임으로 설정해주세요.
+            </p>
+            <button
+              class="withAnybody border text-[0.66rem] bg-transparent no-underline cursor-pointer mb-[0.6875rem] px-2.5 py-1.5 rounded-[20px] border-solid border-[#9DA1B4]"
+            >
+              누구나
+            </button>
+            <button
+              class="withFemale border text-[0.66rem] bg-transparent no-underline cursor-pointer mb-[0.6875rem] px-2.5 py-1.5 rounded-[20px] border-solid border-[#9DA1B4]"
+            >
+              여자만
+            </button>
+            <button
+              class="withMale border text-[0.66rem] bg-transparent no-underline cursor-pointer mb-[0.6875rem] px-2.5 py-1.5 rounded-[20px] border-solid border-[#9DA1B4]"
+            >
+              남자만
+            </button>
           </li>
-          <li>
-            <div><img src="./../images/withWho/people.png" alt="나이" />나이</div>
+          <li
+            class="h-[46px] text-sm flex flex-nowrap flex-row bg-pink-600 items-center justify-between"
+          >
+            <div><img src="./../images/withWho/people.png" alt="/" />나이</div>
             <div tabindex="0">누구나</div>
           </li>
-          <li>
-            <div><img src="./../images/withWho/password.png" alt="가입조건" />승인 후 참여</div>
-            <div><img src="./../images/board/toggle.png" alt="켜기,끄기" tabindex="0" /></div>
+          <li
+            class="h-[46px] text-sm flex flex-nowrap flex-row bg-pink-600 items-center justify-between"
+          >
+            <div><img src="/" alt="/" />승인 후 참여</div>
+            <input type="checkbox" id="toggle" hidden />
+
+            <label
+              for="toggle"
+              class="toggleSwitch w-11 h-6 block relative bg-white cursor-pointer rounded-[30px]"
+            >
+              <span class="toggleButton"></span>
+            </label>
           </li>
         </ul>
-        <button class="nextButton" onclick="location.href='/'">일정만들기</button>
+        <button
+          class="nextButton bg-[#373F67] text-[white] text-sm w-[92.8125%] h-[45px] fixed mt-6 mb-[2.125rem] mr-[3.75%] rounded-lg border-0 bottom-[2.125rem]"
+          onclick="location.href='/'"
+        >
+          일정만들기
+        </button>
       </main>
     </div>
   </body>
